--- a/Views/Home/SendMail.cshtml
+++ b/Views/Home/SendMail.cshtml
@@ -11,28 +11,29 @@
     <div class="form-group">
         <label asp-for="From">From</label>
         <input type="email" asp-for="From" class="form-control" />
-        <span asp-validation-for="From"></span>
+        <span asp-validation-for="From" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="To">To</label>
         <input type="email" asp-for="To" class="form-control" />
-        <span asp-validation-for="To"></span>
+        <span asp-validation-for="To" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Subject">Subject</label>
         <input type="text" asp-for="Subject" class="form-control" />
-        <span asp-validation-for="Subject"></span>
+        <span asp-validation-for="Subject" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Message">Message</label>
         <textarea rows="4" asp-for="Message" class="form-control"></textarea>
-        <span asp-validation-for="Message"></span>
+        <span asp-validation-for="Message" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-success">Send Mail</button>
 </form>
 
 @section Scripts{
-    <script src="lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script>
 
     </script>
